--- a/contact.html
+++ b/contact.html
@@ -258,7 +258,7 @@
     <section class="w3l-copyright">
       <div class="container">
         <div class="row bottom-copies">
-          <p class="col-lg-8 copy-footer-29">© 2024 Wildlive. All rights reserved. Design by SIDDHI SINGH</p>
+          <p class="col-lg-8 copy-footer-29">© 2024 Wildlive. All rights reserved. Design by SHIVAM SINGH AND SIDDHI SINGH</p>
 
           <div class="col-lg-4 footer-list-29">
             <ul class="d-flex text-lg-right">
